--- a/CSS/mixins.less
+++ b/CSS/mixins.less
@@ -124,7 +124,7 @@
         &:last-child { padding-right: 0; }
     }
 }
-.display-inline {
+.display-inline() {
     display:inline-block; *display:inline; position:relative;
 }
 .prevent-highlight() {
