--- a/CSS/settings.less
+++ b/CSS/settings.less
@@ -123,7 +123,7 @@
 
 
 //IMAGES
-.responsive-photo {
+.responsive-photo() {
     background-repeat:no-repeat;
     background-size:cover;
     background-position:center;
