new homepage hero with revolving text WIP

--- a/CSS/settings.less
+++ b/CSS/settings.less
@@ -6,6 +6,7 @@
 @pattern-round-dots:       ~'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/c5c9895ba9e44fa4a033c85536aca668.png';
 @pattern-square-dots:      ~'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/bcd674ba39a84863930ac57971cd6f83.png';
 @pattern-ribbon:           ~'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/bc7bbc66139042f88e518fb3b8c55e45.png';
+@pattern-ribbon-bw:        ~'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/910ac0e74c694ee1999c064277a25496.png';
 @pattern-stacked-bars:     ~'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/370ab0f99e744b6d89af831e4a7561f4.png';
 @pattern-split-circles:    ~'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/6cb9dd20ab114d138a8bf677067e2def.png';
 @pattern-triangles:        ~'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/fa295d6e2e474160a93c096fdf3ac439.png';
@@ -120,6 +121,10 @@
 
 //CUSTOM CUBIC BEZIERS
 @bounce-ease-out: cubic-bezier(.88,0,.5,1);
+// timing functions
+@snappy-ease: cubic-bezier(.86,.01,.23,1);
+@snappy-ease-out: cubic-bezier(.2,0,.03,1);
+@snappy-ease-in: cubic-bezier(.98,0,.76,1);
 
 
 //IMAGES
