--- a/CSS/components.less
+++ b/CSS/components.less
@@ -623,24 +623,7 @@ a.cta-button,
 
 
 
-//CARD BETWEEN ROWS
-.in-between-card.row {
-    position:relative; z-index:5;
-    .card {
-        position:relative; z-index:5;
-        background-color:@white;
-        padding:20px;
-        color:@dark-gray;
-        .box-shadow(1px 1px 5px rgba(0,0,0,0.5));
-    }
-    @media @medium {
-		margin-top:-150px; margin-bottom:60px;
-        .card {padding:30px;}
-    }
-}
-section.above-card {
-    @media @medium {padding-bottom:150px; position:relative; z-index:4;}
-}
+
 
 
 
@@ -1098,3 +1081,55 @@ section.above-card {
         .uppercase;
     }
 }
+
+.text-revolver {
+    position:relative;
+    .display(flex);
+    .align-items(stretch);
+    .justify-content(flex-start);
+    .flex-wrap(wrap);
+    .flex(1, 1, 0px);
+    height:1em;
+
+    .rev-window {
+        position:relative;
+        .flex(1, 1, 0px);
+    }
+    .rev-block {
+        position:absolute; z-index:0;
+        opacity:0;
+        top:0; left:20px;
+        font-weight:600;
+        .uppercase;
+        background-color:@orange;
+        background-repeat:repeat;
+        background-image:url(@pattern-ribbon-bw);
+        background-size:176px * .5;
+        background-blend-mode:screen;
+        .animation(revolving-text 10s @snappy-ease-out 0s normal infinite);
+
+        &:nth-child(2) {.animation-delay(2s~"!important");}
+        &:nth-child(3) {.animation-delay(4s~"!important");}
+        &:nth-child(4) {.animation-delay(6s~"!important");}
+        &:nth-child(5) {.animation-delay(8s~"!important"); color:@red;}
+    }
+
+    .rev-text {
+        color:@pure-black;
+        mix-blend-mode:screen;
+        background-color:@white;
+    }
+}
+//.passed-view .fade-in {.animation(fade-in 0.3s ease-out 0s normal forwards);}
+
+
+
+.keyframes(revolving-text;{
+    0%{opacity:0; .translateY(-10%);}
+    2%{opacity:0; .translateY(-10%);}
+    5%{opacity:1; .translateY(0);}
+    17%{opacity:1; .translateY(0);}
+    20%{opacity:0; .translateY(10%);}
+    80%{opacity:0; .translateY(10%);}
+    100%{opacity:0; .translateY(-10%);}
+});
