--- a/CSS/less/options.less
+++ b/CSS/less/options.less
@@ -112,7 +112,7 @@
 
 .no-spacing{margin:0;padding:0}
 .padding {
-    padding:20px
+    padding:20px;
     &-5 {padding:5px}
     &-10 {padding:10px}
     &-15 {padding:15px}
