--- a/CSS/sass/body/_pattern-grid.scss
+++ b/CSS/sass/body/_pattern-grid.scss
@@ -6,76 +6,64 @@
         padding-top: 7em;
     }
     @include xlarge {
-        padding-top: 0;
+        padding-top: 30px;
         padding-left: 25px;
 
     }
     
     .photo {
 
-        grid-column-start: 3;
-        grid-column-end: 9;
-        grid-row-start: 2;
-        grid-row-end: 5;
+        grid-column: 3/9;
+        grid-row: 2/5;
         z-index: 1;
 
     }
     
     .background-pattern.pattern-triangles.pattern-small.height-small {
 
-        grid-column-start: 3;
-        grid-column-end: 9;
-        grid-row-start: 1;
-        grid-row-end: 4;
+        grid-column: 3/9;
+        grid-row: 1/4;
 
     }
 
     .background-pattern.pattern-tartan.pattern-small.height-medium {
 
-        grid-row-start: 2;
-        grid-row-end: 3;
-        grid-column-start: 1;
-        grid-column-end: 3;
+        grid-column: 1/3;
+        grid-row: 2/3;
 
     }
 
     .background-pattern.pattern-stacked-bars.pattern-small.height-small {
 
-        grid-column-start: 2;
-        grid-column-end: 4;
-        z-index: 3;
+        grid-column: 2/4;
         grid-row-start: 3;
+        z-index: 3;
 
     }
 
     .background-pattern.pattern-squiggles.pattern-medium.height-small {
 
-        grid-column-start: 1;
-        grid-column-end: 3;
+        grid-column: 1/3;
 
     }
 
     .background-pattern.pattern-ribbon.pattern-small.height-tiny {
 
-        grid-column-start: 1;
-        grid-column-end: 9;
+       grid-column: 1/9;
         height: 40px;
 
     }
 }
 
 .cta-home-group {
-    padding-left: 1em;
-    @include medium {
-        padding-left: 1.5em;
-    }
+    padding-left: .5em;
     @include large {
         display: flex;
         flex-direction: row;
         flex-basis: auto;
         flex-grow: 1;
         flex-shrink: 1;
-        padding: 1em 3em;
+        padding: 1em;
     }
 }
 
